deployment/manifests/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-app-service
  namespace: publikationsempfehlung
spec:
  selector:
    app: next-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
